--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout:default
-title : 我的Blog
+title : my blog
 ---
 <h2>{{page.title}}</h2>
-<p>最新文章</p>
+<p>news</p>
 <ul>
 	{%for post in site.posts%}
 	<li>{{   post.date |   date_to_string       }}
